# mficlient

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.md  README.rst  mfi  mfi.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
mficlient/: __init__.py  client.py  fake.py  fake_data.py  main.py
src/mficlient/: client.py  fake.py  fake_data.py  main.py
tests/: test_client.py  test_env.py
